# freya-hn-app

./: Cargo.toml  README.md  Taskfile.yml  rustfmt.toml
.github/workflows/: release.yml
src/: main.rs  models.rs  theme.rs
src/components/: card_footer.rs  comment_view.rs  footer_label.rs  icons.rs  indication_label.rs  info_line.rs  mod.rs  no_story_selected_view.rs  primitives.rs  skeletons.rs  story_card.rs  story_detail_view.rs  story_list_view.rs  story_tab.rs
src/utils/: api.rs  datetime.rs  mod.rs
