[package]
name = "freya-hn-app"
version = "0.8.2"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = [
  "macro",
  "hooks",
], default-features = false }
env_logger = "0.11.8"
freya = "0.3"
futures = "0.3.31"
html2text = "0.15.1"
jiff = { version = "0.2", features = ["serde"] }
log = "0.4.27"
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1", features = ["full"] }
